@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added the script socks-brute that performs brute force password
+  guessing against SOCKS 5 servers. [Patrik]
+
 o [NSE] Added the script vmauthd-brute that performs brute force password
   guessing against the VMware authentication daemon. [Patrik]
 
